--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 </head>
 <body>
     <header>
-    <img src="images/" alt="UdoDavid">
-        <h2>Udo David A.</h2>
+        <div class="profile">
+            <img src="images/ceo.JPG" alt="UdoDavid">
+            <h1> Udo David A.</h1>
+        
+        <a id="menu" href="#"></a>
+        </div>
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="chamber.html">Chamber</a></li>
                 <li><a href="https://github.com/udodavid">Github Profile</a></li>
@@ -25,5 +29,65 @@
             </ul>
         </nav>
     </header>
+    <main class="main"> 
+        <div class="flexbox-container">
+            <div class="flexbox-item flexbox-item-1">
+                <h1>Course Work</h1>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="flexbox-item flexbox-item-2">
+                <h1>Lagos, Nigeria</h1>
+                <figure class="figure">
+                    <img src="images/lagos.webp" alt="Lagos" class="img">
+                    <figcaption>Lagos</figcaption>
+                </figure>
+            </div>
+        </div>
+        <div class="flexbox2">
+            <h2>Web and Computer Programming Caertificate</h2>
+            <section class="flexbox-container2">
+                <div class="flexbox-item2 flexbox-item-01">
+                    <p>All</p>
+                </div>
+                <div class="flexbox-item2 flexbox-item-02">
+                    <p>CSE</p>
+                </div>
+                <div class="flexbox-item2 flexbox-item-03">
+                    <p>WDD</p>
+                </div>
+            </section>
+            <section class="flexbox-container3">
+                <div class="flexbox-item3 flexbox-item-001">
+                    <p>CSE 110</p>
+                </div>
+                <div class="flexbox-item3 flexbox-item-002">
+                    <p>WDD 130</p>
+                </div>
+                <div class="flexbox-item3 flexbox-item-003">
+                    <p>CSE 111</p>
+                </div>
+                <div class="flexbox-item3 flexbox-item-004">
+                    <p>CSE 210</p>
+                </div>
+                <div class="flexbox-item3 flexbox-item-005">
+                    <p>WDD 131</p>
+                </div>
+                <div class="flexbox-item3 flexbox-item-006">
+                    <p>WDD 231</p>
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <footer>
+        <p>
+            &copy; <span id="currentyear"></span> 🥇Udo David A.🥇Nigeria <img src="images/flag.webp" alt="">
+        </p>
+        <p id="lastModified"></p>
+      </footer>
 </body>
 </html>
