--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD231 - Course Home Page</title>
-    <meta name="description" content="WDD231 - Course Home Page">
     <meta name="author" content="UDO DAVID">
+    <meta property="og:title" content="Course Title">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://udodavid.github.io/wdd231/images/lagos.webp">
+    <meta property="og:url" content="https://udodavid.github.io/wdd231/index.html#">
+    <meta property="twitter:card" content="">
+    <!-- Non Essential, But Recomended -->
+    <meta property="og:description" content="WDD231 - Course Home Page">
+    <meta property="og:site_name" content="Course Title">
+    <meta name="twiter:image:alt" content="Alt text for image">
+    <!-- Non Essential, But Required for Analytics -->
+    <meta property="fb:app_id" content="your_app_id">
+    <meta name="twitter:site" content="@udodavid">
+    <!-- External Links -->
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/scripts.js" defer></script>
     <link rel="icon" href="favicon.ico">
