--- a/chamber.html
+++ b/chamber.html
@@ -18,32 +18,137 @@
     <meta property="fb:app_id" content="your_app_id">
     <meta name="twitter:site" content="@udodavid">
     <!-- External Links -->
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/scripts.js" defer></script>
+    <link rel="stylesheet" href="styles/chamber.css">
+    <script src="scripts/chamber.js" defer></script>
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <div class="profile">
+        <div class="logo">
             <img src="images/ceo.JPG" alt="UdoDavid">
             <h1> Udo David A.</h1>
-        
-        <a id="menu" href="#"></a>
+            <a id="menu" href="#"></a>
         </div>
         <nav class="nav-links">
             <ul class="navigation">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="chamber.html">Chamber</a></li>
-                <li><a href="https://github.com/udodavid" target="_blank">Github Profile</a></li>
-                <li><a href="www.linkedin.com/in/david-udo-j" target="_blank">Linkedin</a></li>
+                <li><a href="chamber.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="join.html" target="_blank">Join</a></li>
             </ul>
         </nav>
     </header>
+    <section class="hero">
+        <img src="images/lagos.webp" alt="Hero Image" class="hero-image">
+        <button class="hero-button">Keynote Tickets</button>
+    </section>
     <main>
+        <h2>Home</h2>
+        <div class="flexbox-container">
+            <div class="flexbox-item flexbox-item-1">
+                <div class="events">
+                    <h3>Events</h3>
+                    <div id="events-content">Upcoming events will be displayed here...</div>
+                </div>
+            </div>
+            <div class="flexbox-item flexbox-item--2">
+                <div class="current-weather">
+                    <h3>Current Weather</h3>
+                    <div class="weather-content">
+                        <img src="images/weather-icon.png" alt="Weather Icon">
+                        <div class="weather-details"> 
+                            <p>75°F</p>
+                            <p>Partly Cloudy</p>
+                            <p>High: 85°</p>
+                            <p>Low: 52°</p>
+                            <p>Humidity: 34%</p>
+                            <p>Sunrise: 7:30 AM</p>
+                            <p>Sunset: 9:59 PM</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flexbox-item flexbox-item-3">
+                <div class="forecast">
+                    <h3>Weather Forecast</h3>
+                    <div class="forecast-content">
+                        <p>Today <strong>90°</strong></p>
+                        <p>Wednesday <strong>89°</strong></p>
+                        <p>Thursday <strong>68°</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <!-- Second Flexbox -->
+        <div class="flexbox-container-2">
+            <div class="flexbox-item-2 flexbox-item-01">
+                <!-- Business Directory Preview -->
+                <div class="business-directory">
+                    <h2>Business Name</h2>
+                    <p>Business Tag Line</p>
+                    <div class="business-content">
+                        <img src="images/ceo.JPG" alt="">
+                        <div class="business-details">
+                            <p><strong>Email:</strong> info@gmail.com</p>
+                            <p><strong>Phone:</strong> 800-555-1234</p>
+                            <p><strong>Url:</strong> mybusiness.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flexbox-item-2 flexbox-item-02">
+                <!-- Business Directory Preview2 -->
+                <div class="business-directory">
+                    <h2>Business Name</h2>
+                    <p>Business Tag Line</p>
+                    <div class="business-content">
+                        <img src="images/ceo.JPG" alt="">
+                        <div class="business-details">
+                            <p><strong>Email:</strong> info@gmail.com</p>
+                            <p><strong>Phone:</strong> 800-555-1234</p>
+                            <p><strong>Url:</strong> mybusiness.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flexbox-item-2 flexbox-item-03">
+                <!-- Business Directory Preview3 -->
+                <div class="business-directory">
+                    <h2>Business Name</h2>
+                    <p>Business Tag Line</p>
+                    <div class="business-content">
+                        <img src="images/ceo.JPG" alt="">
+                        <div class="business-details">
+                            <p><strong>Email:</strong> info@gmail.com</p>
+                            <p><strong>Phone:</strong> 800-555-1234</p>
+                            <p><strong>Url:</strong> mybusiness.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <section class="social-icons">
+            <a href="https://facebook.com/udo_david" target="_blank" aria-label="Facebook">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://instagram.com/daudodavidsax" target="_blank" aria-label="Instagram">
+              <i class="fab fa-instagram"></i>
+            </a>
+        </section>
+        <p>
+            &copy; <span id="currentyear"></span> 🥇Udo David A.🥇Nigeria <img src="images/flag.webp" alt="">
+        </p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
