--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav class="nav-links">
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="chamber.html">Chamber</a></li>
+                <li><a href="chamber/chamber.html">Chamber</a></li>
                 <li><a href="https://github.com/udodavid" target="_blank">Github Profile</a></li>
                 <li><a href="www.linkedin.com/in/david-udo-j" target="_blank">Linkedin</a></li>
             </ul>
