--- a/chamber/join.html
+++ b/chamber/join.html
@@ -172,7 +172,7 @@
 
   <!-- Footer -->
   <footer>
-    <section class="social-icons">
+    <div class="social-icons">
         <a href="https://facebook.com/udo_david" target="_blank" aria-label="Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
@@ -182,7 +182,7 @@
         <a href="https://instagram.com/daudodavidsax" target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-    </section>
+      </div>
     <p>
         &copy; <span id="currentyear"></span> 🥇Udo David A.🥇Nigeria <img src="images/flag.webp" alt="">
     </p>
