--- a/Sapphy/cart.html
+++ b/Sapphy/cart.html
@@ -49,26 +49,26 @@
                 <h2>Sapphy Array</h2>
             </div>
             <ul class="nav-links">
-                <li><a href="#">HOME</a></li>
+                <li><a href="sapphy.html">HOME</a></li>
                 <li class="dropdown">
                     <a href="#">SHOP</a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Men's Collection</a></li>
+                        <li><a href="product.html">Product</a></li>
                         <li><a href="#">Women's Collection</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#">ABOUT</a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Our Story</a></li>
-                        <li><a href="#">Mission</a></li>
+                        <li><a href="about.html">Our Story</a></li>
+                        <li><a href="mission.html">Mission</a></li>
                     </ul>
                 </li>
             </ul>
             <div class="nav-right">
                 <input type="text" placeholder="Search..." class="search-bar">
-                <a href="#"><img src="profile-icon.png" alt="Profile" class="icon"></a>
-                <a href="#"><img src="cart-icon.png" alt="Cart" class="icon"></a>
+                <a href="profile.html"><img src="profile-icon.png" alt="Profile" class="icon"></a>
+                <a href="cart.html"><img src="cart-icon.png" alt="Cart" class="icon"></a>
             </div>
         </nav>
     <header>
