--- a/Sapphy/product.html
+++ b/Sapphy/product.html
@@ -39,17 +39,36 @@
                 <span>EN</span> | <span>NGN</span>
             </div>
             <div class="profile">
-                <span>Temi Adebayo</span>
+                <span>Sapphy Array</span>
             </div>
         </div>
+        <!-- Navigation Bar -->
         <nav class="navbar">
+            <div class="logo"> 
+                <img src="images/Logo.webp" alt="">
+                <h2>Sapphy Array</h2>
+            </div>
             <ul class="nav-links">
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#shop">SHOP</a></li>
-                <li><a href="#about">ABOUT</a></li>
+                <li><a href="sapphy.html">HOME</a></li>
+                <li class="dropdown">
+                    <a href="#">SHOP</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="product.html">Product</a></li>
+                        <li><a href="#">Women's Collection</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#">ABOUT</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="about.html">Our Story</a></li>
+                        <li><a href="mission.html">Mission</a></li>
+                    </ul>
+                </li>
             </ul>
-            <div class="search-cart">
-                <input type="text" placeholder="Search...">
+            <div class="nav-right">
+                <input type="text" placeholder="Search..." class="search-bar">
+                <a href="profile.html"><img src="profile-icon.png" alt="Profile" class="icon"></a>
+                <a href="cart.html"><img src="cart-icon.png" alt="Cart" class="icon"></a>
             </div>
         </nav>
     </header>
