--- a/Sapphy/profile.html
+++ b/Sapphy/profile.html
@@ -42,19 +42,13 @@
             </ul>
         </nav>
     </header>
-    <main class="thankyou-container">
-        <!-- Main Content -->
-        <header>
-            <h1>Thank You for Applying!</h1>
-        </header>
-
-        <p>We have received the following information:</p>
-        <ul id="form-data"></ul>
-  </main>
-
+    <main>
+        
+    </main>
+</body>
   <!-- Footer -->
   <footer>
-    <section class="social-icons">
+    <div class="social-icons">
         <a href="https://facebook.com/udo_david" target="_blank" aria-label="Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
@@ -64,12 +58,11 @@
         <a href="https://instagram.com/daudodavidsax" target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-    </section>
+      </div>
     <p>
         &copy; <span id="currentyear"></span> 🥇Udo David A.🥇Nigeria <img src="images/flag.webp" alt="">
     </p>
     <p id="lastModified"></p>
 </footer>
-
 </body>
 </html>
