--- a/Sapphy/sapphy.html
+++ b/Sapphy/sapphy.html
@@ -67,8 +67,8 @@
             </ul>
             <div class="nav-right">
                 <input type="text" placeholder="Search..." class="search-bar">
-                <a href="profile.html"><img src="profile-icon.png" alt="Profile" class="icon"></a>
-                <a href="cart.html"><img src="cart-icon.png" alt="Cart" class="icon"></a>
+                <a href="profile.html"><img src="images/user.png" alt="Profile" class="icon"></a>
+                <a href="cart.html"><img src="images/shopping-cart.png" alt="Cart" class="icon"></a>
             </div>
         </nav>
     
