--- a/Sapphy/product.html
+++ b/Sapphy/product.html
@@ -67,8 +67,8 @@
             </ul>
             <div class="nav-right">
                 <input type="text" placeholder="Search..." class="search-bar">
-                <a href="profile.html"><img src="profile-icon.png" alt="Profile" class="icon"></a>
-                <a href="cart.html"><img src="cart-icon.png" alt="Cart" class="icon"></a>
+                <a href="profile.html"><img src="images/user.png" alt="Profile" class="icon"></a>
+                <a href="cart.html"><img src="images/shopping-cart.png" alt="Cart" class="icon"></a>
             </div>
         </nav>
     </header>
@@ -135,7 +135,7 @@
 
     <div class="product-preview">
         <!-- First Product Preview -->
-        <div class="preview" data-target="p-1">
+        <div class="preview active" data-target="p-1">
             <i class="fas fa-times"></i>
             <img src="images/pdf/Picture 1.jpg" alt="">
             <h4>Hazel</h4>
